--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(oopfinal)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(oopfinal main.cpp)
+add_executable(oopfinal main.cpp mint.h mint_utils.cpp)
